--- a/Frontend/src/components/Body.css
+++ b/Frontend/src/components/Body.css
@@ -65,3 +65,24 @@
 .near-moon-gradient {
     background-image: linear-gradient(to bottom, #5ee7df 0%, #b490ca 100%);
 }
+
+.my-button {
+    background-color: #068080; /* Muted teal color */
+    color: white; /* Text color */
+    border: none; /* Removes default border */
+    padding: 10px 20px; /* Adds padding inside the button */
+    border-radius: 5px; /* Rounds the corners of the button */
+    font-size: 16px; /* Sets font size */
+    cursor: pointer; /* Changes cursor to a pointer on hover */
+    transition: background-color 0.3s ease; /* Smooth transition for background color change */
+  }
+  
+  .my-button:hover {
+    background-color: #3A5858; /* Darker shade for hover effect */
+  }
+  
+  .fa-lock,.fa-envelope {
+    color: #333; /* Dark color */
+    font-size: 24px; /* Adjust size as needed */
+  }
+  
